# Game_LIFE

./: CMakeLists.txt  README.md  draw.cpp  header.h  main.cpp
